<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user_management"
            android:icon="@drawable/ic_menu_user_management"
            android:title="@string/user_management" />
        <item
            android:id="@+id/nav_education_management"
            android:icon="@mipmap/education_management"
            android:title="@string/education_management" />
        <item
            android:id="@+id/nav_statistics_management"
            android:icon="@drawable/ic_menu_statistics_management"
            android:title="@string/statistics_management" />
    </group>

    <group android:checkableBehavior="none" android:id="@+id/unused">
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_menu_log_out"
            android:title="@string/log_out" />
    </group>


</menu>
