<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_attendance_management"
            android:icon="@drawable/ic_menu_attendance_management"
            android:title="@string/attendance_management" />
        <item
            android:id="@+id/nav_statistics_management"
            android:icon="@drawable/ic_menu_statistics_management"
            android:title="@string/statistics_management" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_menu_log_out"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
